--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,5 @@
 SERVER_API_BASE_URL=http://127.0.0.1:9000
+# SOCKET_CONNECT_URL=http://127.0.0.1:9000
+
+# CLIENT_DEV_HOST=127.0.0.1
+# CLIENT_DEV_PORT=8088
