--- a/server/.env
+++ b/server/.env
@@ -2,5 +2,8 @@ MONGODB_URI=mongodb://127.0.0.1/dkp-system
 PROTOCOL=http
 HOST=127.0.0.1
 PORT=9000
+SERVER_PORT=9000
+SERVER_IP=127.0.0.1
+SEED_DB=true
 
 # SAUCE_USERNAME=kenny
