--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,8 @@
     "vue-router": "3.1.6",
     "vue-socket.io": "^3.0.10",
     "vuex": "3.1.2",
+    "vxe-table": "^3.3.10",
+    "xe-utils": "^3.3.1",
     "xlsx": "^0.16.6"
   },
   "devDependencies": {
@@ -55,6 +57,8 @@
     "@vue/eslint-config-standard": "5.1.x",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.1.x",
+    "babel-plugin-component": "^1.1.1",
+    "babel-plugin-import": "^1.13.3",
     "cross-env": "7.0.x",
     "eslint": "6.8.x",
     "eslint-plugin-import": "2.20.x",
