--- a/server/.env
+++ b/server/.env
@@ -1,9 +1,11 @@
-MONGODB_URI=mongodb://127.0.0.1/dkp-system
+MONGODB_URI=mongodb://127.0.0.1/dkp-system-js
 PROTOCOL=http
-HOST=127.0.0.1
-PORT=9000
-SERVER_PORT=9000
-SERVER_IP=127.0.0.1
-SEED_DB=true
+HOST=202.91.35.207
+PORT=9001
+
+SERVER_HOST=202.91.35.207
+SERVER_PORT=9001
+SERVER_IP=0.0.0.0
+SEED_DB=false
 
 # SAUCE_USERNAME=kenny
