--- a/server/.env
+++ b/server/.env
@@ -1,10 +1,10 @@
-MONGODB_URI=mongodb://127.0.0.1/dkp-system-js
+MONGODB_URI=mongodb://127.0.0.1/dkp_system_jhprod
 PROTOCOL=http
-HOST=127.0.0.1
-PORT=9001
+HOST=www.jianghu.club
+PORT=80
 
-SERVER_HOST=127.0.0.1
-SERVER_PORT=9001
+SERVER_HOST=www.jianghu.club
+SERVER_PORT=80
 SERVER_IP=0.0.0.0
 SEED_DB=false
 
