--- a/client/.env
+++ b/client/.env
@@ -1,5 +1,2 @@
-SERVER_API_BASE_URL=http://127.0.0.1:9001
-# SOCKET_CONNECT_URL=http://127.0.0.1:9000
-
-# CLIENT_DEV_HOST=127.0.0.1
-# CLIENT_DEV_PORT=8088
+VUE_APP_SERVER_API_BASE_URL=http://www.jianghu.club
+VUE_APP_SOCKET_CONNECT_URL=http://www.jianghu.club
