--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -29,8 +29,8 @@
   // Event Triggers
   // ===
 
-  "editor.formatOnSave": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": false,
+  // "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true,
     "source.fixAll.stylelint": true,
@@ -49,7 +49,6 @@
     "workspace": "💼",
     "vetur": ""
   },
-  "prettier.disableLanguages": [],
 
   // ===
   // HTML
