--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-VUE_APP_SERVER_API_BASE_URL=http://www.jianghu.club
-VUE_APP_SOCKET_CONNECT_URL=http://www.jianghu.club
+VUE_APP_SERVER_API_BASE_URL=http://www.weimengyou.club
+VUE_APP_SOCKET_CONNECT_URL=http://www.weimengyou.club
