--- a/server/.env
+++ b/server/.env
@@ -1,9 +1,9 @@
-MONGODB_URI=mongodb://127.0.0.1/dkp_system_jhprod
+MONGODB_URI=mongodb://127.0.0.1/dkp_system_prod_wmy
 PROTOCOL=http
-HOST=www.jianghu.club
+HOST=www.weimengyou.club
 PORT=80
 
-SERVER_HOST=www.jianghu.club
+SERVER_HOST=www.weimengyou.club
 SERVER_PORT=80
 SERVER_IP=0.0.0.0
 SEED_DB=false
